<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.NavigationForBlind.Activities.MainActivity">


    <org.opencv.android.JavaCameraView
        android:id="@+id/javaCameraView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/voiceCommandsButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="1dp"
            android:background="@drawable/voicecommands_selector"
            android:contentDescription="@string/voice_commands"
            android:scaleType="fitXY"
            android:clickable="true"
            android:focusable="true" />

        <ImageButton
            android:id="@+id/locationButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="1dp"
            android:background="@drawable/location_selector"
            android:contentDescription="@string/location"
            android:scaleType="fitXY"
            android:clickable="true"
            android:focusable="true"/>

        <ImageButton
            android:id="@+id/compassButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="1dp"
            android:background="@drawable/compass_selector"
            android:contentDescription="@string/compass"
            android:scaleType="fitXY"
            android:clickable="true"
            android:focusable="true" />

        <ImageButton
            android:id="@+id/timeButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="1dp"
            android:background="@drawable/time_selector"
            android:contentDescription="@string/time"
            android:scaleType="fitXY"
            android:clickable="true"
            android:focusable="true"/>

        <ImageButton
            android:id="@+id/dateButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="1dp"
            android:background="@drawable/date_selector"
            android:contentDescription="@string/date"
            android:scaleType="fitXY"
            android:clickable="true"
            android:focusable="true"/>

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="1dp"
            android:background="@drawable/settings_selector"
            android:contentDescription="@string/settings"
            android:scaleType="fitXY"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</FrameLayout>
